--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="{{ url_for('static',filename='css/style.css') }}">
         <title>Empire</title>
     </head>
     <body>
@@ -9,9 +10,10 @@
             <a href="{{ url_for('index') }}">Home</a>
             <a href="{{ url_for('routes') }}">Routes</a>
         </nav>
-        <hr>
-        <div>
+        <div class="container">
             {% block content %} {% endblock %}
         </div>
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+        <script src="{{ url_for('static',filename='js/draganddrop.js') }}"></script>
     </body>
 </html>
