--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,5 +1,12 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    HOMEPAGE
+    Plans of the Empire : 
+    <form action="/upload" method="POST" enctype="multipart/form-data">
+
+        <input type="file" name="file" id="file" class="inputfile" />
+        <label for="file">Choose a file</label>
+
+        <input class="call-to-action" type="submit" value="Send! "/>
+    </form>
 {% endblock %}
