--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -13,7 +13,6 @@
         <div class="container">
             {% block content %} {% endblock %}
         </div>
-        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-        <script src="{{ url_for('static',filename='js/draganddrop.js') }}"></script>
+        <script src="{{ url_for('static',filename='js/upload-file.js') }}"></script>
     </body>
 </html>
