✨ Routes to Endor

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    Plans of the Empire : 
+    <h1>Plans of the Empire : </h1>
     <form action="/upload" method="POST" enctype="multipart/form-data">
 
         <input type="file" name="file" id="file" class="inputfile" />
